--- a/public/style/style.css
+++ b/public/style/style.css
@@ -28,7 +28,7 @@
 body{
     background-color: var(--main-bg-color);
     color : #fff;
-    font-family: 'Montserrat';
+    font-family: 'Gilroy','Montserrat';
     
 }
 
