--- a/templates/pages/admin/administration/trainees.html.twig
+++ b/templates/pages/admin/administration/trainees.html.twig
@@ -5,7 +5,7 @@
         <button type="button" class="active btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=trainees">Stagiaires</a></button>
 </div>
 <div class="cont_Search">
-    <label for="myInput">Recherchez</label>
+    <label for="myInput">Rechercher</label>
     <input type="text" id="myInput" />
 </div>
 <div class="contData">
