--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -70,7 +70,7 @@
             </td>
         </tr>
         {% endif %}
-        {% if key == nbIndex -1 %}
+        {% if key == nbIndex -1 and key != 0 %}
         <tr>
             <td scope='col' id='td_id-card' class='col-1 down-left'>{{document.wording_typeOfDoc}}</td>
             <td scope='col' class='down-right col-2'>
