--- a/templates/pages/admin/gestion/training/training.gestion.html.twig
+++ b/templates/pages/admin/gestion/training/training.gestion.html.twig
@@ -3,19 +3,22 @@
 <div class="contAllDataGestion">
     <form action="/?area=admin&controller=gestion&action=training" method="POST">
         <div class="contDataGestion  ">
-            <input type="hidden" name="id" value="{{ docs.id_training }}" />
-            <h2>{{ docs.title_formation }}</h2>
+            <input type="hidden" name="id" value="{{ training.getIdTraining }}" />
+            <h2>{{ training.title_formation }}</h2>
             <div>
                 <label for="title_formation">Titre de la formation</label>
-                <input type='text' value='{{ docs.title_formation }}' name="title_formation" id="title_formation" />
+                <input type='text' value='{{ training.getTitleFormation }}' name="title_formation" id="title_formation" />
             </div>
             <div>
                 <label for="capacity_training">Capacité d'accueil</label>
-                <input type='number' value='{{ docs.capacity_training }}' name="capacity_training" id="capacity_training" />
+                <input type='number' value='{{ training.getCapacityTraining }}' name="capacity_training" id="capacity_training" />
             </div>
             <div>
-                <label for="trainingYear">Année de validité</label>
-                <input type='number' value='{{ docs.trainingYear }}' name="trainingYear" id="trainingYear" />
+                <label for="isValid">Statut</label>
+                <select name="isValid" id="isValid">
+                    <option value="1">Valide</option>
+                    <option value="0">Non Valide</option>
+                </select>
             </div>
             <div class='contBtnMenu'>
                 <button type="button" class=" btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion">Retour</a></button>
@@ -32,11 +35,11 @@
                 <tbody id="myTable">
                         {% for id , document in documents %}
                             <tr>
-                                <td class="cel celtraining" data-info="Nom" ><span  >{{ document }}</span>
+                                <td class="cel celtraining" data-info="Document" ><span  >{{ document }}</span>
                                     <div>
                                         <span><img data-id="{{ id }}" class="DocName" src="images/edit.png" /></span>
                                         <span>
-                                            <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
+                                            <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.id_training }}">
                                                     <input type="hidden" name="id_typeOfDoc" value="{{ id }}"  />
                                                     <input type="hidden" name="delete" />
                                                 <label class='labdel' for='btn_delete{{ id }}'>
@@ -54,7 +57,7 @@
         {% else %}
             <p>Aucun document n'est requis pour la formation actuellement</p>
         {% endif %}
-        <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
+        <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.id_training }}">
 
         <input   id="editDoc" type="text" name="doc"  />
         <input id="IdeditDoc" type="hidden" name="Iddoc" />
