--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -200,7 +200,14 @@ tr{
     position: absolute;
 }
 
-
+.NewDoc{
+    margin: auto 0;
+    margin-right: 20px;
+    background-color: var(--main-title-color);
+    padding: 5px;
+    border-radius: 50px;
+    cursor: pointer;
+}
 
 
 /* --------------------- FIN Progess BAR pour Candidats -------------------- */
