--- a/templates/pages/admin/gestion/training/training.gestion.html.twig
+++ b/templates/pages/admin/gestion/training/training.gestion.html.twig
@@ -39,7 +39,7 @@
                                     <div>
                                         <span><img data-id="{{ id }}" class="DocName" src="images/edit.png" /></span>
                                         <span>
-                                            <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.id_training }}">
+                                            <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.getIdTraining }}">
                                                     <input type="hidden" name="id_typeOfDoc" value="{{ id }}"  />
                                                     <input type="hidden" name="delete" />
                                                 <label class='labdel' for='btn_delete{{ id }}'>
@@ -57,7 +57,7 @@
         {% else %}
             <p>Aucun document n'est requis pour la formation actuellement</p>
         {% endif %}
-        <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.id_training }}">
+        <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ training.getIdTraining }}">
 
         <input   id="editDoc" type="text" name="doc"  />
         <input id="IdeditDoc" type="hidden" name="Iddoc" />
