--- a/templates/partials/base-admin.html.twig
+++ b/templates/partials/base-admin.html.twig
@@ -7,6 +7,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="/style/style.css">
       <link rel="stylesheet" href="/style/admin.css">
+      <link rel="stylesheet" href="/style/admin-table.css">
       <link rel="stylesheet" href="/style/profileUser.css">
       <title>Admin MNS</title>
     </head>
@@ -18,7 +19,7 @@
                 <span class="nav__burger__bar"></span>
               </button>
               <ul class="navbar__menu">
-                  <li class="navbar__item"> <a href="/?area=admin&controller=admin" class="navbar__links">Admin</a></li>
+                  <li class="navbar__item"> <a href="/?area=admin&controller=home" class="navbar__links">Admin</a></li>
                   <li class="navbar__item"><a href="/?area=admin&controller=gestion" class="navbar__links">Gestion</a></li>
                   <!-- <li class="navbar__item"><a href="/page=delay" class="navbar__links">Mes retards</a></li> -->
               </ul>
@@ -49,8 +50,9 @@
   
   {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-     <script src= "scripts/nav.js"></script>
-    <script src= "scripts/nav-admin.js"></script>
-     <script src= "scripts/functions.js"></script>
+     <script src="scripts/nav.js"></script>
+    <script src="scripts/nav-admin.js"></script>
+     <script src="scripts/functions.js"></script>
+    <script src="/scripts/document.js"></script>
   </body>
 </html>
